# functionally-complete

./: .gitignore  CHANGELOG.md  README.md  cabal.project  deploy.sh  functionally-complete.cabal  service
app/: Main.hs
resources/: 2024-06-11-layout.html  404.html  fonts.css  index.html  styles.css
reverse-proxy/: CHANGELOG.md  reverse-proxy.cabal
reverse-proxy/app/: Main.hs  Options.hs
