cabal-version:      3.4
name:               functionally-complete
version:            0.1.0.0
synopsis:           Blog
-- description:
homepage:           functionally-complete.com
license:            NONE
author:             Jakob Brünker
maintainer:         jakob.bruenker@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable functionally-complete
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      warp ^>=3.4.1,
                      warp-tls ^>=3.4.5,
                      wai ^>=3.2.4,
                      wai-middleware-static ^>=0.9.2,
                      wai-app-static ^>=3.1.9,
                      http-types ^>=0.12.4,
                      bytestring ^>=0.12.1,
                      filepath ^>=1.5.2,
                      directory ^>=1.3.8,
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
