cabal-version:      3.4
name:               reverse-proxy
version:            0.1.0.0
synopsis:           Reverse proxy for Functionally Complete
-- description:
homepage:           functionally-complete.com
license:            NONE
author:             Jakob Brünker
maintainer:         jakob.bruenker@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wunused-packages

executable reverse-proxy
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      bytestring,
                      filepath,
                      fsnotify,
                      http-client-tls,
                      http-client,
                      http-conduit,
                      http-reverse-proxy,
                      http-types,
                      optparse-applicative,
                      wai,
                      warp-tls,
                      warp,
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
