cabal-version:      3.4
name:               reverse-proxy
version:            0.1.0.0
synopsis:           Reverse proxy for Functionally Complete
-- description:
homepage:           functionally-complete.com
license:            NONE
author:             Jakob Brünker
maintainer:         jakob.bruenker@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wunused-packages

executable reverse-proxy
    import:           warnings
    main-is:          Main.hs
    other-modules:    Options
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      bytestring >= 0.12.1 && < 0.13,
                      directory >= 1.3.7 && < 1.4,
                      directory >= 1.3.8 && < 1.4,
                      filepath >= 1.5.2 && < 1.6,
                      fsnotify >= 0.4.1 && < 0.5,
                      http-client-tls >= 0.3.6 && < 0.4,
                      http-client >= 0.7.17 && < 0.8,
                      http-conduit >= 2.3.8 && < 2.4,
                      http-reverse-proxy >= 0.6.0 && < 0.7,
                      http-types >= 0.12.4 && < 0.13,
                      mtl >= 2.3.1 && < 2.4,
                      optparse-applicative >= 0.18.1 && < 0.19,
                      wai >= 3.2.4 && < 3.3,
                      warp-tls >= 3.4.5 && < 3.5,
                      warp >= 3.4.1 && < 3.5,
                      text,
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
